<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgTitulo"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgDescricao" />

            <ImageView
                android:id="@+id/imagePostagem"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/image1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edtQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/msginforme"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnCalculo"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickAqui"
                android:text="@string/btnCalculo" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtResulte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Resultado"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>